--- a/package.json
+++ b/package.json
@@ -1,15 +1,29 @@
 {
   "name": "vue3-hello-world",
   "version": "0.0.0",
+  "files": [
+    "dist"
+  ],
+  "main": "./dist/vue3-hello-world.umd.js",
+  "module": "./dist/vue3-hello-world.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/vue3-hello-world.es.js",
+      "require": "./dist/vue3-hello-world.umd.js"
+    }
+  },
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
+    "build": "yarn build:lib && yarn build:demo",
+    "build:lib": "vue-tsc --noEmit && vite build",
+    "build:demo": "vue-tsc --noEmit && vite --config demo.config.ts build",
     "serve": "vite preview"
   },
   "dependencies": {
     "vue": "^3.2.6"
   },
   "devDependencies": {
+    "@types/node": "^16.7.8",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.6",
     "typescript": "^4.4.2",
