--- a/package.json
+++ b/package.json
@@ -18,17 +18,23 @@
     "build": "yarn build:lib && yarn build:demo",
     "build:lib": "vue-tsc --noEmit && vite build",
     "build:demo": "vue-tsc --noEmit && vite --config demo.config.ts build",
-    "serve": "vite preview"
+    "serve": "vite preview --config demo.config.ts",
+    "lint": "eslint --ext .js,.vue,.ts --ignore-path .gitignore src",
+    "lint:fix": "eslint --ext .js,.vue,.ts --ignore-path .gitignore --fix src"
   },
   "dependencies": {
-    "vue": "^3.2.20"
+    "vue": "^3.2.37"
   },
   "devDependencies": {
-    "@types/node": "^16.10.7",
-    "@vitejs/plugin-vue": "^1.9.3",
-    "@vue/compiler-sfc": "^3.2.20",
-    "typescript": "^4.4.4",
-    "vite": "^2.6.7",
-    "vue-tsc": "^0.28.3"
+    "@antfu/eslint-config": "^0.26.1",
+    "@babel/core": "^7.18.10",
+    "@types/babel__core": "^7.1.19",
+    "@types/node": "^16.11.52",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vue/compiler-sfc": "^3.2.37",
+    "eslint": "^8.22.0",
+    "typescript": "^4.7.4",
+    "vite": "^3.0.9",
+    "vue-tsc": "^0.40.1"
   }
 }
